--- a/03_delarosa.html
+++ b/03_delarosa.html
@@ -79,20 +79,20 @@
 		<hr class="hr2">
 		
 		<table class="container">
-			<tr> <!-- image -->
-				<td>
-					<img src="src/img/bato.png"></img>
+			<tr> <td>
+					<img src="src/img/bamaquino.png"></img>
 				</td>
 			</tr>
-			<tr> <!-- candidate / party -->
-				<td>
-					<h1>Dela Rosa, Bato</h1>
-					<h2>PDPLBN</h2>
+			<tr> <td>
+					<h1>Aquino, Bam</h1>
+					<h2>KNP</h2>
 				</td>
 			</tr>
 			<tr>
 				<td class="cndd_info">
-					Under construction...
+					<p>
+						Senator Bam Aquino, a social entrepreneur and former youth leader, advocates for the development of Filipino families by enacting specific laws pertaining to entrepreneurship and education. He is the originator of the historic Go Negosyo Act, which has created hundreds of Negosyo Centers across the country to assist ambitious company owners and small enterprises. He was the main proponent of the Universal Access to Quality Tertiary Education Act, which eliminated tuition at public universities, community colleges, and technical-vocational schools. Motivated by the conviction that individuals can overcome poverty with the correct assistance, Senator Aquino is still striving for the prosperity of every Filipino household.
+					</p>
 				</td>
 			</tr>
 		</table>
