--- a/04_tulfo.html
+++ b/04_tulfo.html
@@ -79,20 +79,20 @@
 		<hr class="hr2">
 		
 		<table class="container">
-			<tr> <!-- image -->
-				<td>
+			<tr> <td>
 					<img src="src/img/erwin.png"></img>
 				</td>
 			</tr>
-			<tr> <!-- candidate / party -->
-				<td>
+			<tr> <td>
 					<h1>Tulfo, Erwin</h1>
 					<h2>LAKAS</h2>
 				</td>
 			</tr>
 			<tr>
 				<td class="cndd_info">
-					Under construction...
+					<p>
+						Erwin Tulfo, a 2025 senate candidate who was once a well-known and scathing broadcast journalist, takes his unwavering fight against corruption and support for the average Filipino to the national political arena. His policy is based on increasing pro-poor social welfare programs, guaranteeing unwavering accountability, and improving government transparency through digitization. His candidacy is scrutinized, nevertheless, with legal issues arising from his affiliation with a well-known political dynasty and unanswered citizenship difficulties. Tulfo continues to be a divisive figure, portraying himself as an advocate for the marginalized whose bold reform pledge is balanced against ingrained reservations about dynastic politics.
+					</p>
 				</td>
 			</tr>
 		</table>
