--- a/03_delarosa.html
+++ b/03_delarosa.html
@@ -80,18 +80,18 @@
 		
 		<table class="container">
 			<tr> <td>
-					<img src="src/img/bamaquino.png"></img>
+					<img src="src/img/bato.png"></img>
 				</td>
 			</tr>
 			<tr> <td>
-					<h1>Aquino, Bam</h1>
-					<h2>KNP</h2>
+					<h1>Dela Rosa, Bato</h1>
+					<h2>PDPLBN</h2>
 				</td>
 			</tr>
 			<tr>
 				<td class="cndd_info">
 					<p>
-						Senator Bam Aquino, a social entrepreneur and former youth leader, advocates for the development of Filipino families by enacting specific laws pertaining to entrepreneurship and education. He is the originator of the historic Go Negosyo Act, which has created hundreds of Negosyo Centers across the country to assist ambitious company owners and small enterprises. He was the main proponent of the Universal Access to Quality Tertiary Education Act, which eliminated tuition at public universities, community colleges, and technical-vocational schools. Motivated by the conviction that individuals can overcome poverty with the correct assistance, Senator Aquino is still striving for the prosperity of every Filipino household.
+						As the 21st Chief of the Philippine National Police and a highly decorated officer, this senator provides a wealth of expertise from his more than thirty years of distinguished service in the Executive Branch. After leading the Bureau of Corrections and being elected to the Senate in 2019, he has turned his longtime fight against illegal substances into priority legislation. He has already led the passage of the BFP Modernization Act and the Height Equality Act, demonstrating his ongoing commitment to bolstering the nation's peace and order uniformed forces. He graduated from the PMA "Sinagtala" Class of 1986 with a Doctorate in Development Administration.
 					</p>
 				</td>
 			</tr>
