--- a/06_marcoleta.html
+++ b/06_marcoleta.html
@@ -79,20 +79,20 @@
 		<hr class="hr2">
 		
 		<table class="container">
-			<tr> <!-- image -->
-				<td>
+			<tr> <td>
 					<img src="src/img/rodante.png"></img>
 				</td>
 			</tr>
-			<tr> <!-- candidate / party -->
-				<td>
+			<tr> <td>
 					<h1>Marcoleta, Rodante</h1>
 					<h2>IND</h2>
 				</td>
 			</tr>
 			<tr>
 				<td class="cndd_info">
-					Under construction...
+					<p>
+						The guiding principle of Deputy House Speaker Rodante Marcoleta's public service is straightforward: laws are only effective when they are carried out correctly. His early years spent in a low-income Tarlac farming family, where he personally observed injustice, shaped this commitment and inspired him to pursue a career in law. When he joined Congress in 2004, he supported historic legislation that gave average families a better opportunity, such as the Magna Carta of the Poor, free college education, universal healthcare, and free irrigation. However, he insists that enacting laws is only the first step. In order to prevent corruption and guarantee that government programs actually help the most disadvantaged Filipinos, he thinks that Congress's ongoing monitoring is the most important task.
+					</p>
 				</td>
 			</tr>
 		</table>
