--- a/07_lacson.html
+++ b/07_lacson.html
@@ -79,20 +79,20 @@
 		<hr class="hr2">
 		
 		<table class="container">
-			<tr> <!-- image -->
-				<td>
+			<tr> <td>
 					<img src="src/img/pingpingping.png"></img>
 				</td>
 			</tr>
-			<tr> <!-- candidate / party -->
-				<td>
+			<tr> <td>
 					<h1>Lacson, Ping</h1>
 					<h2>IND</h2>
 				</td>
 			</tr>
 			<tr>
 				<td class="cndd_info">
-					Under construction...
+					<p>
+						Over the course of his more than fifty years in public service, Panfilo "Ping" Lacson has continuously upheld his belief in standing up for what is right and opposing what is wrong. He began his lengthy career in police enforcement, where he developed a reputation for being tough. He famously overhauled the Philippine National Police as its chief by suppressing dishonest "kotong cops" and enforcing rigorous discipline, which helped the PNP achieve its highest-ever public popularity ratings. After that, he spent eighteen years in the Senate, where he was most well-known for being the country's fiscal inspector. He passed important laws like the National ID System and steadfastly fought "pork barrel" expenditures, saving taxpayers billions of pesos. In addition to passing legislation, he oversaw the government's extensive post-Super Typhoon Yolanda rebuilding initiatives.
+					</p>
 				</td>
 			</tr>
 		</table>
