--- a/08_sotto.html
+++ b/08_sotto.html
@@ -79,20 +79,20 @@
 		<hr class="hr2">
 		
 		<table class="container">
-			<tr> <!-- image -->
-				<td>
+			<tr> <td>
 					<img src="src/img/tito.png"></img>
 				</td>
 			</tr>
-			<tr> <!-- candidate / party -->
-				<td>
+			<tr> <td>
 					<h1>Sotto, Tito</h1>
 					<h2>IND</h2>
 				</td>
 			</tr>
 			<tr>
 				<td class="cndd_info">
-					Under construction...
+					<p>
+						As a successful artist, athlete, and prominent congressman, Vicente "Tito" Sotto III had one of the most unusual careers in Philippine public service. He was already well-known as a national bowling champion and the musical leader of the renowned band VST & Co. long before he entered politics. Additionally, he wrote the well-known 1986 EDSA Revolution anthem, "Magkaisa." He started his career in government in 1988 as the vice mayor of Quezon City, where he launched his well-known and protracted campaign against illegal drugs. He wrote more than 100 laws during his many years in the Senate, culminating a truly remarkable and diverse career that earned him the chamber's top position as Senate President.
+					</p>
 				</td>
 			</tr>
 		</table>
