--- a/09_cayetano.html
+++ b/09_cayetano.html
@@ -79,20 +79,20 @@
 		<hr class="hr2">
 		
 		<table class="container">
-			<tr> <!-- image -->
-				<td>
+			<tr> <td>
 					<img src="src/img/pia.png"></img>
 				</td>
 			</tr>
-			<tr> <!-- candidate / party -->
-				<td>
+			<tr> <td>
 					<h1>Pia, Cayetano</h1>
 					<h2>NP</h2>
 				</td>
 			</tr>
 			<tr>
 				<td class="cndd_info">
-					Under construction...
+					<p>
+						Over the course of almost two decades, Senator Pia S. Cayetano has established a solid reputation as a vibrant and successful leader who is also an accomplished lawyer, economist, and devoted athlete. She has taken on significant reforms, supporting the historic CREATE Act to reduce corporate taxes and stimulate the economy. She was instrumental in the creation of the country's pandemic response legislation and spearheaded the Sin Tax Law, which generated money for public health. She has written legislation that protect children through improved adoption procedures and assist students with impairments since she is a fervent supporter of families and young people. Through policies like the Expanded Maternity Leave Law, she has also fought for the rights of working moms and student-athletes as a former national athlete.
+					</p>
 				</td>
 			</tr>
 		</table>
