--- a/10_villar.html
+++ b/10_villar.html
@@ -79,20 +79,20 @@
 		<hr class="hr2">
 		
 		<table class="container">
-			<tr> <!-- image -->
-				<td>
+			<tr> <td>
 					<img src="src/img/villar.png"></img>
 				</td>
 			</tr>
-			<tr> <!-- candidate / party -->
-				<td>
+			<tr> <td>
 					<h1>Villar, Camille</h1>
 					<h2>NP</h2>
 				</td>
 			</tr>
 			<tr>
 				<td class="cndd_info">
-					Under construction...
+					<p>
+						A leader of the new generation, Deputy Speaker Camille Villar skillfully combines her love of public service with her broad commercial expertise. She joined Congress in 2019 with a distinct viewpoint on the economy, having earned a Master's degree in Business Administration from Spain and working at the highest levels of her family's retail businesses. She makes advantage of this by assisting small businesses, particularly through her NEGOSENSO initiative, and by drafting legislation to enhance consumer protection from fraud, healthcare, and education. She is a true voice for today's issues since, while looking to the future, she also supports contemporary problems that have an impact on many Filipinos, such as raising awareness of mental health issues, combating teen pregnancy, and advocating for equal rights for the LGBTQIA+ community.
+					</p>
 				</td>
 			</tr>
 		</table>
