--- a/11_lapid.html
+++ b/11_lapid.html
@@ -79,20 +79,20 @@
 		<hr class="hr2">
 		
 		<table class="container">
-			<tr> <!-- image -->
-				<td>
+			<tr> <td>
 					<img src="src/img/lito.png"></img>
 				</td>
 			</tr>
-			<tr> <!-- candidate / party -->
-				<td>
+			<tr> <td>
 					<h1>Lapid, Lito</h1>
 					<h2>NPC</h2>
 				</td>
 			</tr>
 			<tr>
 				<td class="cndd_info">
-					Under construction...
+					<p>
+						Known to many as the "Bida ng Masa," Senator Manuel "Lito" Lapid is a well-known action star who has spent his lengthy tenure in the Senate demonstrating that hard work is more important than formal education. He dispelled early skepticism by consistently filing hundreds of measures each term, making him one of the chamber's most productive members. The common Filipino has always been the focus of his legislative efforts. His Free Legal Assistance Act, which provides much-needed legal services to the impoverished, is a significant achievement. In addition, he was a key contributor to the Kindergarten Education Act and has advocated for increased funding for neighborhood sports leagues and tourism. He has proven to be a trustworthy advocate for the people he represents by working hard.
+					</p>
 				</td>
 			</tr>
 		</table>
