--- a/12_marcos.html
+++ b/12_marcos.html
@@ -79,20 +79,20 @@
 		<hr class="hr2">
 		
 		<table class="container">
-			<tr> <!-- image -->
-				<td>
+			<tr> <td>
 					<img src="src/img/marcos.png"></img>
 				</td>
 			</tr>
-			<tr> <!-- candidate / party -->
-				<td>
+			<tr> <td>
 					<h1>Marcos, Imee</h1>
 					<h2>NP</h2>
 				</td>
 			</tr>
 			<tr>
 				<td class="cndd_info">
-					Under construction...
+					<p>
+						Senator Imee Marcos, a member of the well-known Marcos political family, is currently in her second term in the Senate. Her lengthy political career started under her father's leadership and continued after her family returned from exile. She served three terms as governor of Ilocos Norte and then as a congresswoman before winning a seat in the Senate in 2019. She has been involved in a number of major issues over her career. Among these are disagreements over her educational background, since other universities contest her graduation claims. She has also been connected to reported misappropriation of provincial finances and purported financial irregularities concerning offshore trusts. Senator Marcos is the chair of a number of committees in the current Congress, including those that deal with social justice, rural development, foreign policy, and welfare.
+					</p>
 				</td>
 			</tr>
 		</table>
