--- a/02_aquino.html
+++ b/02_aquino.html
@@ -96,5 +96,8 @@
 				</td>
 			</tr>
 		</table>
+		
+		<span class="reference">Reference: <a target="_blank" href="https://web.senate.gov.ph/senators/sen_bio/aquino_bam_bio.asp">Senator Paolo Benigno "Bam" Aquino IV - Senate of the Philippines | web.senate.gov.ph</a></span>
+		
 	</body>
 </html>
