--- a/03_delarosa.html
+++ b/03_delarosa.html
@@ -96,5 +96,8 @@
 				</td>
 			</tr>
 		</table>
+		
+		<span class="reference">Reference: <a target="_blank" href="https://web.senate.gov.ph/senators/sen_bio/delarosa_bio.asp">Senator Ronald "Bato" Dela Rosa - Senate of the Philippines | web.senate.gov.ph</a></span>
+		
 	</body>
 </html>
