--- a/04_tulfo.html
+++ b/04_tulfo.html
@@ -96,5 +96,8 @@
 				</td>
 			</tr>
 		</table>
+		
+		<span class="reference">Reference: <a target="_blank" href="https://medium.com/@ki90grq8y/candidate-profile-erwin-tulfo-5d09cd04f7d0">Candidate Profile: Erwin Tulfo | medium.com</a></span>
+		
 	</body>
 </html>
