--- a/01_go.html
+++ b/01_go.html
@@ -93,6 +93,11 @@
 					<p>
 						In 2019, Senator Christopher "Bong" Go was elected to the Senate, bringing with him more than 20 years of public service as former President Rodrigo Duterte's loyal adviser. He is the primary author of the Malasakit Centers Act and, in his capacity as Chairman of the Senate Committee on Health, has pushed for the construction of many public hospitals and Super Health Centers to improve access to healthcare. A prolific lawmaker, he has also written important laws that modernized the Bureau of Fire Protection, established the National Academy of Sports, and created the Department of Migrant Workers. Senator Go continues to promote disaster resilience, better local governance, and a government that truly cares about the Filipino people while flying the Tapang at Malasakit banner.
 					</p>
+					
+					<br>
+						<h1>Reference:</h1>
+						<h3>https://senatorbonggo.ph/about</h3>
+					</br>
 				</td>
 			</tr>
 		</table>
