--- a/05_pangilinan.html
+++ b/05_pangilinan.html
@@ -96,5 +96,8 @@
 				</td>
 			</tr>
 		</table>
+		
+		<span class="reference">Reference: <a target="_blank" href="https://web.senate.gov.ph/senators/sen_bio/pangilinan_bio.asp">Senator Kiko Pangilinan - Senate of the Philippines | web.senate.gov.ph</a></span>
+		
 	</body>
 </html>
