--- a/03_delarosa.html
+++ b/03_delarosa.html
@@ -93,6 +93,11 @@
 					<p>
 						As the 21st Chief of the Philippine National Police and a highly decorated officer, this senator provides a wealth of expertise from his more than thirty years of distinguished service in the Executive Branch. After leading the Bureau of Corrections and being elected to the Senate in 2019, he has turned his longtime fight against illegal substances into priority legislation. He has already led the passage of the BFP Modernization Act and the Height Equality Act, demonstrating his ongoing commitment to bolstering the nation's peace and order uniformed forces. He graduated from the PMA "Sinagtala" Class of 1986 with a Doctorate in Development Administration.
 					</p>
+
+					<br>
+						<h1>Reference:</h1>
+						<h3>https://web.senate.gov.ph/senators/sen_bio/delarosa_bio.asp</h3>
+					</br>
 				</td>
 			</tr>
 		</table>
