--- a/06_marcoleta.html
+++ b/06_marcoleta.html
@@ -96,5 +96,8 @@
 				</td>
 			</tr>
 		</table>
+		
+		<span class="reference">Reference: <a target="_blank" href="https://mb.com.ph/2022/2/18/who-is-rodante-marcoleta">Manila Bulletin - Who is Rodante Marcoleta | mb.com.ph</a></span>
+		
 	</body>
 </html>
