--- a/04_tulfo.html
+++ b/04_tulfo.html
@@ -93,6 +93,11 @@
 					<p>
 						Erwin Tulfo, a 2025 senate candidate who was once a well-known and scathing broadcast journalist, takes his unwavering fight against corruption and support for the average Filipino to the national political arena. His policy is based on increasing pro-poor social welfare programs, guaranteeing unwavering accountability, and improving government transparency through digitization. His candidacy is scrutinized, nevertheless, with legal issues arising from his affiliation with a well-known political dynasty and unanswered citizenship difficulties. Tulfo continues to be a divisive figure, portraying himself as an advocate for the marginalized whose bold reform pledge is balanced against ingrained reservations about dynastic politics.
 					</p>
+
+					<br>
+						<h1>Reference:</h1>
+						<h3>https://medium.com/@ki90grq8y/candidate-profile-erwin-tulfo-5d09cd04f7d0</h3>
+					</br>
 				</td>
 			</tr>
 		</table>
