--- a/05_pangilinan.html
+++ b/05_pangilinan.html
@@ -93,6 +93,11 @@
 					<p>
 						Senator Kiko Pangilinan, a graduate of Harvard's Kennedy School of Government and UP Law, started his political career more than three decades ago as a student activist opposing the dictatorship. His conviction in collaborative governance has led to significant legislation during his three terms in the Senate. He supported the agricultural industry via the Sagip Saka Act and wrote the Juvenile Justice and Welfare Act to establish a more compassionate system for young offenders. His support continued in his executive position as head of Food Security, where he was able to control crop pests and stabilize rice prices. In keeping with his lifelong dedication to creating a fair and inclusive democracy for all Filipinos, he is currently the leader of the Liberal Party and a leading supporter of the Free College Education law.
 					</p>
+
+					<br>
+						<h1>Reference:</h1>
+						<h3>https://web.senate.gov.ph/senators/sen_bio/pangilinan_bio.asp</h3>
+					</br>
 				</td>
 			</tr>
 		</table>
