--- a/07_lacson.html
+++ b/07_lacson.html
@@ -96,5 +96,8 @@
 				</td>
 			</tr>
 		</table>
+		
+		<span class="reference">Reference: <a target="_blank" href="https://web.senate.gov.ph/senators/sen_bio/lacson_bio.asp">Senator Panfilo "Ping" Lacson - Senate of the Philippines | web.senate.gov.ph</a></span>
+		
 	</body>
 </html>
