--- a/08_sotto.html
+++ b/08_sotto.html
@@ -93,6 +93,12 @@
 					<p>
 						As a successful artist, athlete, and prominent congressman, Vicente "Tito" Sotto III had one of the most unusual careers in Philippine public service. He was already well-known as a national bowling champion and the musical leader of the renowned band VST & Co. long before he entered politics. Additionally, he wrote the well-known 1986 EDSA Revolution anthem, "Magkaisa." He started his career in government in 1988 as the vice mayor of Quezon City, where he launched his well-known and protracted campaign against illegal drugs. He wrote more than 100 laws during his many years in the Senate, culminating a truly remarkable and diverse career that earned him the chamber's top position as Senate President.
 					</p>
+
+					
+					<br>
+						<h1>Reference:</h1>
+						<h3>https://web.senate.gov.ph/senators/sen_bio/sotto_bio.asp</h3>
+					</br>
 				</td>
 			</tr>
 		</table>
