--- a/12_marcos.html
+++ b/12_marcos.html
@@ -96,5 +96,8 @@
 				</td>
 			</tr>
 		</table>
+		
+		<span class="reference">Reference: <a target="_blank" href="https://www.rappler.com/people/p69315340-imee-marcos/">Imee Marcos | rappler.com</a></span>
+		
 	</body>
 </html>
