--- a/08_sotto.html
+++ b/08_sotto.html
@@ -96,11 +96,13 @@
 
 					
 					<br>
-						<h1>Reference:</h1>
-						<h3>https://web.senate.gov.ph/senators/sen_bio/sotto_bio.asp</h3>
+						
 					</br>
 				</td>
 			</tr>
 		</table>
+		
+		<span class="reference">Reference: <a target="_blank" href="https://web.senate.gov.ph/senators/sen_bio/sotto_bio.asp">Senator Vicente C. Sotto - Senate of the Philippines | web.senate.gov.ph</a></span>
+		
 	</body>
 </html>
