--- a/09_cayetano.html
+++ b/09_cayetano.html
@@ -95,11 +95,13 @@
 					</p>
 
 					<br>
-						<h1>Reference:</h1>
-						<h3>https://web.senate.gov.ph/senators/sen_bio/pcayetano_bio.asp</h3>
+						
 					</br>
 				</td>
 			</tr>
 		</table>
+		
+		<span class="reference">Reference: <a target="_blank" href="https://web.senate.gov.ph/senators/sen_bio/pcayetano_bio.asp">Senator Pia S. Cayetano - Senate of the Philippines | web.senate.gov.ph</a></span>
+		
 	</body>
 </html>
