--- a/10_villar.html
+++ b/10_villar.html
@@ -95,11 +95,13 @@
 					</p>
 
 					<br>
-						<h1>Reference:</h1>
-						<h3>https://www.camillevillar.com/about/</h3>
+						
 					</br>
 				</td>
 			</tr>
 		</table>
+		
+		<span class="reference">Reference: <a target="_blank" href="https://www.camillevillar.com/about/">About | Camille Villar | camillevillar.com</a></span>
+		
 	</body>
 </html>
